--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Milahn Martin",
-  "license": "ISC",
+  "license": "Fingerprint ZA",
   "dependencies": {
     "@types/node": "^16.3.2",
+    "discord.js": "^12.5.3",
+    "mysql": "^2.18.1",
     "node-fetch": "^2.6.1",
     "tmi.js": "^1.8.3"
   },
