added some info
add lock file for yarn and also commented out a file that was giving an error

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "tmi.js": "^1.8.3"
   },
   "devDependencies": {
-    "@types/tmi.js": "^1.7.2"
+    "@types/tmi.js": "^1.7.2",
+    "typescript": "^4.5.4"
   }
 }
