--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/node": "^16.3.2",
     "discord.js": "^12.5.3",
+    "dotenv": "^16.0.0",
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.1",
     "tmi.js": "^1.8.3"
