--- a/.github/workflows/fingerprint-CD.yml
+++ b/.github/workflows/fingerprint-CD.yml
@@ -23,8 +23,8 @@ jobs:
       - name: SFTP Deploy
         uses: wlixcc/SFTP-Deploy-Action@v1.2.1
         with:
-          username: fingerprintza
-          server: root@139.59.165.185
+          username: root
+          server: 139.59.165.185
           port: 22 # default is 22
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
 
